# settlers-of-catan

./: .gitignore  Cargo.toml
catan/catan-lib/: Cargo.toml
catan/catan-lib/src/: board.rs  distribution.rs  lib.rs  objects.rs  resource.rs  trade.rs  wasm.rs
catan/catan-lib/src/board/: draw_iters.rs  edition.rs  game.rs  iterators.rs  mod.rs
catan/catan-lib/src/board/iterators/: mod.rs  orbit.rs  ring.rs  spiral.rs
catan/catan-lib/src/game/: dice.rs  edition.rs  error.rs  hand.rs  mod.rs  player.rs  structures.rs  test.rs  transport_segment.rs
catan/catan-lib/src/game/structure/: building.rs  transport.rs
catan/catan-lib/src/object/: card.rs  mod.rs  resource.rs  trade.rs
catan/catan-lib/src/object/structure/: building.rs  mod.rs  transport.rs
catan/catan-lib/src/wasm/: mod.rs  position.rs  resource.rs  trade.rs  wasm.rs
catan/catan-web/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
catan/catan-web/src/: app.html
catan/catan-web/static/: 2_roll.png~
hexgrid/: Cargo.toml
hexgrid/src/: error.rs  lib.rs  position.rs
hexgrid/src/corner/: bounds.rs  mod.rs  table.rs
hexgrid/src/edge/: bounds.rs  mod.rs  table.rs
hexgrid/src/hex/: bounds.rs  mod.rs  table.rs  test.rs
src/: main.rs
src/game/: board.rs  board_old.rs  corner.rs  corner_old.rs  draw_iters.rs  edge.rs  edge_old.rs  game.rs  mod.rs  objects.rs  player.rs  resource.rs  tile.rs  tile_old.rs
src/game/corner/: bounds.rs  holder.rs  mod.rs
src/game/edge/: bounds.rs  holder.rs  mod.rs
src/game/tile/: bounds.rs  holder.rs  mod.rs
(+49 files in other folders)
