[package]
name="catan-lib"
version="0.1.0"
edition="2024"

[dependencies]
getrandom = { version = "0.4.2", features=["wasm_js"] }
rand = { version = "0.10.1" }
hexgrid = { path = "../../hexgrid" }
wasm-bindgen = "0.2.121"
thiserror = "2.0.18"
tsify = "0.5.6"
serde = { version = "1.0.228", features=["derive"] }
tracing = "0.1.44"
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]
